# hl_mai_09_cqrs

./: CMakeLists.txt  command.cpp  query.cpp  readme.md  techstack.md  techstack.yml
